@startuml
'https://plantuml.com/class-diagram

class Ship {
String name
String yearBuilt
getName()
setName()
getYearBuilt()
setYearBuilt()
printInfo()
}

class Cruiseship{
int maxPassengers
getMaxPassengers()
setMaxPassengers()
printInfo()
}

class Cargoship{
int tonnage
getTonnage()
setTonnage()
printInfo()
}
Ship <|-- Cruiseship
Ship <|-- Cargoship

@enduml